[gd_scene load_steps=14 format=2]

[ext_resource path="res://PP/ppL.png" type="Texture" id=2]
[ext_resource path="res://addons/smoothing/smoothing_2d.gd" type="Script" id=3]
[ext_resource path="res://PP/PpBody.gd" type="Script" id=4]
[ext_resource path="res://PP/SpriteFlip.gd" type="Script" id=5]
[ext_resource path="res://PP/JumpLine.gd" type="Script" id=6]
[ext_resource path="res://PP/ppNervousSpriteSheet.png" type="Texture" id=8]
[ext_resource path="res://PP/ScaredAnimation.gd" type="Script" id=9]
[ext_resource path="res://PP/Jiggler.gd" type="Script" id=10]
[ext_resource path="res://PP/OtherAnimations.gd" type="Script" id=11]

[sub_resource type="Animation" id=1]
resource_name = "Scared"
length = 0.333334
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Smoothing2D/Visuals/Jiggler/SpriteFlip/Scared:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Crouch"
length = 0.0416667
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Smoothing2D/Visuals:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.55 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Smoothing2D/Visuals:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0416667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Jump"
length = 0.208333
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Smoothing2D/Visuals:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.208333 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.55 ), Vector2( 1, 1.25 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Smoothing2D/Visuals:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.208333 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, -1.75 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Uncrouch"
length = 0.0416667
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Smoothing2D/Visuals:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.55 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Smoothing2D/Visuals:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0416667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}

[node name="Pp" type="Node2D"]
z_index = 1

[node name="ScaredAnimation" type="AnimationPlayer" parent="."]
autoplay = "Scared"
anims/Scared = SubResource( 1 )
script = ExtResource( 9 )

[node name="OtherAnimations" type="AnimationPlayer" parent="."]
anims/Crouch = SubResource( 2 )
anims/Jump = SubResource( 3 )
anims/Uncrouch = SubResource( 4 )
script = ExtResource( 11 )

[node name="Smoothing2D" type="Node2D" parent="."]
script = ExtResource( 3 )
target = NodePath("../Body")

[node name="Camera2D" type="Camera2D" parent="Smoothing2D"]
current = true

[node name="JumpLine" type="Node2D" parent="Smoothing2D"]
script = ExtResource( 6 )

[node name="Visuals" type="Node2D" parent="Smoothing2D"]

[node name="Jiggler" type="Node2D" parent="Smoothing2D/Visuals"]
script = ExtResource( 10 )

[node name="SpriteFlip" type="Node2D" parent="Smoothing2D/Visuals/Jiggler"]
script = ExtResource( 5 )

[node name="Scared" type="Sprite" parent="Smoothing2D/Visuals/Jiggler/SpriteFlip"]
visible = false
position = Vector2( 1, -3 )
texture = ExtResource( 8 )
hframes = 8
frame = 2

[node name="Idle" type="Sprite" parent="Smoothing2D/Visuals/Jiggler/SpriteFlip"]
position = Vector2( 1, 0 )
texture = ExtResource( 2 )

[node name="Body" type="KinematicBody2D" parent="." groups=[
"ppBody",
]]
script = ExtResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Body"]
position = Vector2( 0, 2 )
polygon = PoolVector2Array( -3, 1, -3, -4, 3, -4, 3, 1 )
[connection signal="just_became_airborne" from="Body" to="ScaredAnimation" method="_on_Body_just_became_airborne"]
[connection signal="just_bounced" from="Body" to="Smoothing2D/Visuals/Jiggler" method="_on_Body_just_bounced"]
[connection signal="just_crouched" from="Body" to="OtherAnimations" method="_on_Body_just_crouched"]
[connection signal="just_jumped" from="Body" to="OtherAnimations" method="_on_Body_just_jumped"]
[connection signal="just_jumped" from="Body" to="Smoothing2D/Visuals/Jiggler/SpriteFlip" method="_on_Body_just_jumped"]
[connection signal="just_landed" from="Body" to="ScaredAnimation" method="_on_Body_just_landed"]
[connection signal="just_uncrouched" from="Body" to="OtherAnimations" method="_on_Body_just_uncrouched"]
